MOD
Refactor de arranque de aplicacion java